Replace existing files

--- a/styles.css
+++ b/styles.css
@@ -52,4 +52,16 @@
         color: #25D366;
         font-size: 30px;
     }
-    
+
+    /*.bi-eye{
+    	position: relative;
+    	float: right;
+    	margin-bottom: 20px;
+    }
+
+    */
+
+    /*.input-group-text{
+    	
+    	 margin-left: 5px;
+    }*/
